litmask/tests/compile/mask_serialize_serde_attr_container.stderr
error: MaskSerialize! invalid-arg: `#[serde(...)]` attributes are not supported
 --> tests/compile/mask_serialize_serde_attr_container.rs:8:1
  |
8 | #[serde(rename_all = "camelCase")]
  | ^
